Remove MaxPermSize parameter, since it is deprecated since JDK 8